--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
     function hidePopup(event) {
         popup.style.cursor = "default"
-        //popup.style.zIndex="-1"
+        popup.style.zIndex="-1"
         popup.style.opacity = null
         popup.style.display = null
     }
