--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
     function hidePopup(event) {
         popup.style.cursor = "default"
         popup.style.zIndex="-1"
-        popup.style.opacity = null
-        popup.style.display = null
+        //popup.style.opacity = null
+        //popup.style.display = null
     }
 
     //make floating text hide and show
